--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,3 +68,11 @@ header {
   text-align: center;
   margin: 0;
 }
+
+.Loader-hidden {
+  display: none;
+}
+
+.Loader-active {
+  display: block;
+}
